--- a/CoreApp/package.json
+++ b/CoreApp/package.json
@@ -1,22 +1,22 @@
 {
   "name": "core-app",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
+    "start": "electron .",
     "start:Core": "ng serve --port 4444",
     "start:app1": "ng serve app1 --port 4422",
-    "start:app2": "ng serve app2 --port 4423",
     "build:core": "ng build --prod --stats-json",
     "build:admin-lib": "ng build admin-lib",
     "build:app1": "ng build app1",
-    "build:app2": "ng build app2",
     "test:core": "ng test",
     "test:app1": "ng test app1",
-    "test:app2": "ng test app2",
     "lint:core": "ng lint",
     "lint:app1": "ng lint app1",
-    "lint:app2": "ng lint app2",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "electron .",
+    "electron-build": "ng build --prod && electron ."
   },
   "private": true,
   "dependencies": {
@@ -43,6 +43,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "electron": "^7.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
